--- a/src/site/_variables.scss
+++ b/src/site/_variables.scss
@@ -9,7 +9,7 @@ $font-height: 20px;
 //== Color
 
 $color-foreground: #202020;
-$color-background: rgb(248, 217, 222);
+$color-background: pink;
 $color-link: #2020e0;
 $accent: #2954ff;
 $accent-focus: #436eff;
